--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: auto;
 
   background-color: #233d4d;
+  color: whitesmoke;
 
   text-align: center;
 
@@ -9,12 +10,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 90vw;
 
   font-weight: bold;
 
   user-select: none;
+
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 .title-container {
@@ -32,7 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 
   width: 90%;
   border-radius: 15px;
@@ -56,6 +58,14 @@
   text-shadow: 3px 3px 2px rgba(97, 155, 138, 1);
 }
 
+.edit {
+  background-color: #fcca46;
+}
+
+.confirm {
+  background-color: #a1c181;
+}
+
 .form {
   display: flex;
   flex-direction: row;
@@ -73,6 +83,7 @@
   border: none;
   border-radius: 5px;
   user-select: none;
+  flex: 1;
 }
 
 .button {
@@ -104,6 +115,9 @@
   flex-direction: column;
   gap: 5px;
   margin-top: 10px;
+  text-wrap: wrap;
+  word-wrap: break-word;
+  max-width: 100dvw;
 }
 
 .task-component {
@@ -119,4 +133,13 @@
 
 .task-buttons {
   align-self: center;
+}
+
+.task-num {
+  border-radius: 50%;
+  background-color: whitesmoke;
+  color: #619b8a;
+  padding: 0px 5px;
+  padding-bottom: 1px;
+  margin: 0 1px;
 }
